More complete implementation

--- a/JDD2014/pom.xml
+++ b/JDD2014/pom.xml
@@ -79,5 +79,15 @@
 			<groupId>org.assertj</groupId>
 			<artifactId>assertj-core</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>org.apache.httpcomponents</groupId>
+			<artifactId>httpclient</artifactId>
+			<version>4.3.5</version>
+		</dependency>
+		<dependency>
+			<groupId>com.netflix.rxjava</groupId>
+			<artifactId>rxjava-apache-http</artifactId>
+			<version>0.20.4</version>
+		</dependency>
 	</dependencies>
 </project>
