--- a/JDD2014/pom.xml
+++ b/JDD2014/pom.xml
@@ -19,6 +19,11 @@
 
 	<dependencies>
 		<dependency>
+			<groupId>commons-codec</groupId>
+			<artifactId>commons-codec</artifactId>
+			<version>1.8</version>
+		</dependency>
+		<dependency>
 			<groupId>com.netflix.rxjava</groupId>
 			<artifactId>javafx</artifactId>
 			<scope>system</scope>
