--- a/JDD2014/pom.xml
+++ b/JDD2014/pom.xml
@@ -30,6 +30,7 @@
 		<dependency>
 			<groupId>com.netflix.rxjava</groupId>
 			<artifactId>rxjava-core</artifactId>
+			<version>0.20.5</version>
 		</dependency>
 		<dependency>
 			<groupId>com.jcraft</groupId>
