--- a/JDD2014/pom.xml
+++ b/JDD2014/pom.xml
@@ -96,10 +96,10 @@
 			<artifactId>httpclient</artifactId>
 			<version>4.3.5</version>
 		</dependency>
-		<!--<dependency>-->
-			<!--<groupId>com.netflix.rxjava</groupId>-->
-			<!--<artifactId>rxjava-apache-http</artifactId>-->
-			<!--<version>0.20.4</version>-->
-		<!--</dependency>-->
+		<dependency>
+			<groupId>com.netflix.rxjava</groupId>
+			<artifactId>rxjava-apache-http</artifactId>
+			<version>0.20.4</version>
+		</dependency>
 	</dependencies>
 </project>
