Changed name of the module from JDD to RxJava. Added DevoxxPL code samples.

--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,7 @@
     </prerequisites>
 
     <modules>
-        <module>jdd2014</module>
+        <module>rxjava</module>
         <module>latency</module>
         <module>memory</module>
     </modules>
