--- a/rxjava/pom.xml
+++ b/rxjava/pom.xml
@@ -11,7 +11,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>pl.tkowalcz.presentations</groupId>
 	<artifactId>jdd2014</artifactId>
-	<name>jdd2014</name>
+	<name>rxjava</name>
 	<version>1.0-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
@@ -35,7 +35,7 @@
 		<dependency>
 			<groupId>io.reactivex</groupId>
 			<artifactId>rxjava</artifactId>
-			<version>1.0.9</version>
+			<version>1.0.12</version>
 		</dependency>
 		<dependency>
 			<groupId>com.jcraft</groupId>
