--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
         <module>rxjava</module>
         <module>latency</module>
         <module>memory</module>
+        <module>jdd2015</module>
     </modules>
 
     <properties>
@@ -54,6 +55,16 @@
                 <groupId>org.apache.commons</groupId>
                 <artifactId>commons-lang3</artifactId>
                 <version>3.3.2</version>
+            </dependency>
+            <dependency>
+                <groupId>commons-io</groupId>
+                <artifactId>commons-io</artifactId>
+                <version>2.4</version>
+            </dependency>
+            <dependency>
+                <groupId>org.hdrhistogram</groupId>
+                <artifactId>HdrHistogram</artifactId>
+                <version>2.1.4</version>
             </dependency>
             <dependency>
                 <groupId>log4j</groupId>
